--- a/index.html
+++ b/index.html
@@ -35,28 +35,43 @@
                   alt="Comment Icon"
                 />
                 <h2 class="form__h2">LEAVE A COMMENT</h2>
+                <!--............................................-->
                 <div class="form_input__container">
                   <label class="form_input__label" for="name">NAME:</label>
+                  <p class="form_input__error" id="form__error_name">
+                    Name is a required field
+                  </p>
                   <input type="text" class="form_input__text" name="name" />
                 </div>
+                <!--............................................-->
                 <div class="form_input__container">
                   <label class="form_input__label" for="email">EMAIL:</label>
+                  <p class="form_input__error" id="form__error_email">
+                    Email address must be valid
+                  </p>
                   <input type="text" class="form_input__text" name="email" />
                 </div>
+                <!--............................................-->
                 <div class="form_input__container">
                   <label class="form_input__label" for="message"
                     >COMMENT:</label
                   >
+                  <p
+                    class="form_input__error form_text_area_error"
+                    id="form__error_comment"
+                  >
+                    Comment is a required field
+                  </p>
                   <div class="form__char_count" id="form__char_count">
                     0/140
                   </div>
                   <textarea
-                    class="form_input__message"
+                    class="form_input_comment"
                     name="message"
                     id="message"
                   ></textarea>
                 </div>
-
+                <!--............................................-->
                 <input
                   class="form__submit_button"
                   type="submit"
@@ -77,7 +92,6 @@
           />
           <h1 class="comment_box__h1">COMMENT</h1>
           <h2 class="comment_box__h2">BOX</h2>
-
           <div id="comments"></div>
         </section>
       </div>
