form error message update

--- a/index.html
+++ b/index.html
@@ -38,17 +38,13 @@
                 <!--............................................-->
                 <div class="form_input__container">
                   <label class="form_input__label" for="name">NAME:</label>
-                  <p class="form_input__error" id="form__error_name">
-                    Name is a required field
-                  </p>
+                  <div class="form_input__error" id="form__error_name"></div>
                   <input type="text" class="form_input__text" name="name" />
                 </div>
                 <!--............................................-->
                 <div class="form_input__container">
                   <label class="form_input__label" for="email">EMAIL:</label>
-                  <p class="form_input__error" id="form__error_email">
-                    Email address must be valid
-                  </p>
+                  <div class="form_input__error" id="form__error_email"></div>
                   <input type="text" class="form_input__text" name="email" />
                 </div>
                 <!--............................................-->
@@ -56,12 +52,10 @@
                   <label class="form_input__label" for="message"
                     >COMMENT:</label
                   >
-                  <p
+                  <div
                     class="form_input__error form_text_area_error"
                     id="form__error_comment"
-                  >
-                    Comment is a required field
-                  </p>
+                  ></div>
                   <div class="form__char_count" id="form__char_count">
                     0/140
                   </div>
