992px media query update

--- a/index.html
+++ b/index.html
@@ -78,14 +78,24 @@
         <!--............................................-->
         <!--............................................-->
         <section class="main_flexbox__item2" id="main_flexbox__item2">
-          <img
-            class="comment_box__logo"
-            id="comment_box__logo"
-            src="./img/comment_box_logo2.svg"
-            alt="Comment Icon"
-          />
-          <h1 class="comment_box__h1">COMMENT</h1>
-          <h2 class="comment_box__h2">BOX</h2>
+          <div class="comment_box__logo_flexbox">
+            <img
+              class="comment_box__logo"
+              id="comment_box__logo"
+              src="./img/comment_box_logo2.svg"
+              alt="Comment Icon"
+            />
+            <img
+              class="comment_box__logo_small"
+              src="./img/comment_box_logo2.svg"
+              alt="Comment Icon"
+            />
+            <div class="comment_box__logo_text">
+              <h1 class="comment_box__h1">COMMENT</h1>
+              <h2 class="comment_box__h2">BOX</h2>
+            </div>
+          </div>
+
           <div id="comments"></div>
         </section>
       </div>
