flexbox styles update

--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
           <div class="form_container">
             <article class="form_flexbox">
               <form class="form_flexbox__item" id="form">
-                <img
-                  class="form_comment_img"
-                  src="./img/comment.svg"
-                  alt="Comment Icon"
-                />
+                <img class="form_comment_img" src="./img/comment.svg" alt="Comment Icon" />
                 <h2 class="form__h2">LEAVE A COMMENT</h2>
                 <!--............................................-->
                 <div class="form_input__container">
@@ -49,28 +45,13 @@
                 </div>
                 <!--............................................-->
                 <div class="form_input__container">
-                  <label class="form_input__label" for="message"
-                    >COMMENT:</label
-                  >
-                  <div
-                    class="form_input__error form_text_area_error"
-                    id="form__error_comment"
-                  ></div>
-                  <div class="form__char_count" id="form__char_count">
-                    0/140
-                  </div>
-                  <textarea
-                    class="form_input_comment"
-                    name="message"
-                    id="message"
-                  ></textarea>
+                  <label class="form_input__label" for="message">COMMENT:</label>
+                  <div class="form_input__error form_text_area_error" id="form__error_comment"></div>
+                  <div class="form__char_count" id="form__char_count">0/140</div>
+                  <textarea class="form_input_comment" name="message" id="message"></textarea>
                 </div>
                 <!--............................................-->
-                <input
-                  class="form__submit_button"
-                  type="submit"
-                  value="Submit"
-                />
+                <input class="form__submit_button" type="submit" value="Submit" />
               </form>
             </article>
           </div>
@@ -78,24 +59,20 @@
         <!--............................................-->
         <!--............................................-->
         <section class="main_flexbox__item2" id="main_flexbox__item2">
-          <div class="comment_box__logo_flexbox">
+          <div class="comment_box__logo_flexbox" id="comment_box__logo_flexbox">
             <img
               class="comment_box__logo"
               id="comment_box__logo"
               src="./img/comment_box_logo2.svg"
               alt="Comment Icon"
             />
-            <img
-              class="comment_box__logo_small"
-              src="./img/comment_box_logo2.svg"
-              alt="Comment Icon"
-            />
+            <img class="comment_box__logo_small" src="./img/comment_box_logo2.svg" alt="Comment Icon" />
             <div class="comment_box__logo_text">
               <h1 class="comment_box__h1">COMMENT</h1>
               <h2 class="comment_box__h2">BOX</h2>
             </div>
           </div>
-          <div id="comments"></div>
+          <div class="comments__container" id="comments"></div>
         </section>
       </div>
     </main>
